--- a/Luwi's Corner/index.html
+++ b/Luwi's Corner/index.html
@@ -6,6 +6,10 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="keywords" content="Luwi's Corner">
+	<meta name="description" content="This is the Luwi's Corner's official webpage.">
+	<meta name='copyright' content='By BBC INNOVATIONS- All Rights Reserved.'>
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
@@ -15,10 +19,10 @@
 		<link href="https://fonts.googleapis.com/css?family=Rufina:400,700" rel="stylesheet">
         
         <!-- title of site -->
-        <title>CarVilla</title>
+        <title>Luwi's Corner</title>
 
         <!-- For favicon png -->
-		<link rel="shortcut icon" type="image/icon" href="assets/img/Luwi's-corner-logo.png"/>
+		<link rel="shortcut icon" type="image/icon" href="assets/img/Logo.png"/>
        
         <!--font-awesome.min.css-->
         <link rel="stylesheet" href="assets/css/font-awesome.min.css">
