--- a/Luwi's Corner/index.html
+++ b/Luwi's Corner/index.html
@@ -5,11 +5,14 @@
         <!-- meta data -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="keywords" content="Luwi's Corner">
-	<meta name="description" content="This is the Luwi's Corner's official webpage.">
-	<meta name='copyright' content='By BBC INNOVATIONS- All Rights Reserved.'>
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="copyright" content="BBC INNOVATIONS, 2023">
+		<meta name="description" content=" WELCOME TO LUWI'S CORNER.
+		Do you need someone to help you express your  love? Well, we ghat you covered. 
+		Call or Whatsapp for the following;
+		Romantic Room decor, Flower Bouquet, Gift Packing, Car Decor, Cakes and many more.">
+
+
 		
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
@@ -616,38 +619,75 @@
 		<!--brand strat -->
 		<section id="brand"  class="brand">
 			<div class="container">
+				<p class="flavour-text">Check out some of our flavours</p><br>
 				<div class="brand-area">
 					<div class="owl-carousel owl-theme brand-item">
+						
 						<div class="item">
 							<a href="#">
-								<img src="assets/img/gift-packing.png" alt="brand-image" />
+								<p class="flav2"><b>Blueberry</b></p>
 							</a>
 						</div><!--/.item-->
 						<div class="item">
 							<a href="#">
-								<img src="assets/img/flower-bouquet.png" alt="brand-image" />
+								<p class="flav1"><b>chocolate</b></p>
 							</a>
 						</div><!--/.item-->
 						<div class="item">
 							<a href="#">
-								<img src="assets/img/Logo.png" alt="brand-image" />
+								<p class="flav4"><b>Lemon</b></p>
 							</a>
 						</div><!--/.item-->
 						<div class="item">
 							<a href="#">
-								<img src="assets/img/BBC_logo.png" alt="brand-image" />
-							</a>
-						</div><!--/.item-->
-
-						<div class="item">
-							<a href="#">
-								<img src="assets/img/car-dacor.png" alt="brand-image" />
+								<p class="flav1"><b>Vanilla</b></p>
 							</a>
 						</div><!--/.item-->
 
 						<div class="item">
 							<a href="#">
-								<img src="assets/img/baking.png" alt="brand-image" />
+								<p class="flav5"><b>Strawberry</b></p>
+							</a>
+						</div><!--/.item-->
+
+						<div class="item">
+							<a href="#">
+								<p class="flav4"><b>Fruit Yoghurt</b></p>
+							</a>
+						</div>
+						<div class="item">
+							<a href="#">
+								<p class="flav3"><b>Red Valvet</b></p>
+							</a>
+						</div>
+						<div class="item">
+							<a href="#">
+								<p class="flav3"><b>Lemon Bliss</b></p>
+							</a>
+						</div>
+						<div class="item">
+							<a href="#">
+								<p class="flav1"><b>Cookies</b></p>
+							</a>
+						</div>
+						<div class="item">
+							<a href="#">
+								<p class="flav1"><b>chocolate Morula</b></p>
+							</a>
+						</div>
+						<div class="item">
+							<a href="#">
+								<p class="flav1"s><b>Coffe Morula</b></p>
+							</a>
+						</div>
+						<div class="item">
+							<a href="#">
+								<p class="flav4"><b>Milo Cake</b></p>
+							</a>
+						</div>
+						<div class="item">
+							<a href="#">
+								<p class="flav1"><b>Vanilla Custard</b></p>
 							</a>
 						</div><!--/.item-->
 					</div><!--/.owl-carousel-->
@@ -676,7 +716,7 @@
 									We bake cakes of all occasions.
 								</p>
 								<div class="footer-contact">
-									<p>info@Luwicorner.com</p>
+									<p>luwichimba@gmail.com</p>
 									<p>+260 963 544106</p>
 								</div>
 							</div>
